<resources>
    <string name="app_name">방풀</string>

    <string name="facebook_app_id">1073682272682418</string>
    <string name="kakao_app_key">81a4f95165067ea0e20430805dd4af1f</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_group">Activity_group</string>
    <string name="title_activity_activity_calendar">Activity_calendar</string>
    <string name="title_activity_activity_intro">Activity_intro</string>
    <string name="title_activity_activity_client">Activity_client</string>
    <string name="title_activity_activity_join">Activity_join</string>
    <string name="title_activity_activity_login">Activity_login</string>

    <string name="join_title">회원가입</string>
    <string name="join_id">ID</string>
    <string name="join_password">Password</string>
    <string name="join_name">Name</string>
    <string name="join_phoneNumber">PhoneNumber</string>
    <string name="join_email">Email</string>
    <string name="join_submit">Submit</string>
    <string name="btn_join_idcheck">idcheck</string>

    <string name="find_id">아이디찾기</string>
    <string name="find_password">비밀번호찾기</string>



    <string name="login_login">Login</string>
    <string name="login_image">Image</string>
    <string name="login_join">join</string>


    <string name="activity_main_app_comment">방풀에 오신것을 환영합니다.</string>
    <string name="app_company"> popcorn</string>
    <string name="input_text" />
    <string name="button_send" />
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_activity_myself">Activity_myself</string>

    <string name="yo_pick_pic">사진 선택</string>
    <string name="yo_my_pic">사진 선택</string>
    <string name="yo_screenshots">스크린샷</string>
    <string name="yo_count">( %1$d 장)</string>
    <string name="yo_tip_select">선택없음</string>
    <string name="yo_preview">미리보기</string>
    <string name="yo_select_pic_count">%1$d</string>
    <string name="yo_pic_detail">상세</string>
    <string name="yo_loding">로딩중</string>

    <string name="camera">카메라</string>
    <string name="gallery">갤러리</string>

    <string name="map_button">Find</string>
    <string name="hnt_et_location">Enter location</string>
    <string name="title_activity_test">test</string>
</resources>
