<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_layout_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="#20c589"
        android:gravity="top"
        android:orientation="vertical">
        <TextView
            android:id="@+id/toptext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="회원가입"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF">
        </TextView>
    </RelativeLayout>

    <!-- android:padding="@color/activity_layout_header_background" -->

    <LinearLayout
        android:id="@+id/ll_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/activity_layout_body_margin"
        android:layout_weight="1"
        android:background="@color/activity_layout_left_background"
        android:orientation="horizontal"
        android:padding="@dimen/activity_layout_body_padding" >

        <LinearLayout
            android:id="@+id/ll_left"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_margin="@dimen/activity_layout_left_margin"
            android:layout_weight="1"
            android:background="@color/activity_layout_left_background"
            android:orientation="vertical"
            android:padding="@dimen/activity_layout_left_padding"
            android:visibility="gone" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_center"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_margin="@dimen/activity_layout_center_margin"
            android:layout_weight="2"
            android:background="@color/activity_layout_center_background"
            android:orientation="vertical"
            android:padding="@dimen/activity_layout_center_padding" >

            <!-- content start -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width = "match_parent"
                    android:layout_height = "50dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_join_id"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight = "1"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/join_id"
                        android:textColor="@color/activity_main_app_name"
                        android:textSize="25sp"
                        android:textStyle="bold" >
                    </TextView>
                    <EditText
                        android:id="@+id/et_join_id"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight ="1"
                        android:layout_gravity="center"
                        android:textColor="@color/activity_login_edit"
                        android:hint="5~20문자"
                        android:imeOptions="actionNext"
                        android:singleLine = "true"
                        android:lines = "1"
                        />
                    <TextView
                        android:id="@+id/tv_idcheck"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight ="1"
                        android:gravity="center"
                        android:textColor="@color/activity_main_app_name"
                        android:textSize="25sp" >
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width = "match_parent"
                    android:layout_height = "50dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_join_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight = "1"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/join_password"
                        android:textColor="@color/activity_main_app_name"
                        android:textSize="25sp"
                        android:textStyle="bold" >
                    </TextView>
                    <EditText
                        android:id="@+id/et_join_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight ="1"
                        android:layout_gravity="center"
                        android:textColor="@color/activity_login_edit"
                        android:hint="input data"
                        android:password = "true"
                        android:imeOptions="actionNext"
                        android:singleLine = "true"
                        android:lines = "1"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width = "match_parent"
                    android:layout_height = "50dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_join_name"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight = "1"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/join_name"
                        android:textColor="@color/activity_main_app_name"
                        android:textSize="25sp"
                        android:textStyle="bold" >
                    </TextView>
                    <EditText
                        android:id="@+id/et_join_name"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight ="1"
                        android:layout_gravity="center"
                        android:textColor="@color/activity_login_edit"
                        android:hint="input data"
                        android:imeOptions="actionNext"
                        android:singleLine = "true"
                        android:lines = "1"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width = "match_parent"
                    android:layout_height = "50dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_join_phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight = "1"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/join_phoneNumber"
                        android:textColor="@color/activity_main_app_name"
                        android:textSize="25sp"
                        android:textStyle="bold" >
                    </TextView>
                    <EditText
                        android:id="@+id/et_join_phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight ="1"
                        android:layout_gravity="center"
                        android:textColor="@color/activity_login_edit"
                        android:hint="input data"
                        android:inputType = "phone"
                        android:phoneNumber = "true"
                        android:imeOptions="actionNext"
                        android:singleLine = "true"
                        android:lines = "1"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width = "match_parent"
                    android:layout_height = "50dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_join_email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight = "1"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/join_email"
                        android:textColor="@color/activity_main_app_name"
                        android:textSize="25sp"
                        android:textStyle="bold" >
                    </TextView>
                    <EditText
                        android:id="@+id/et_join_email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight ="1"
                        android:layout_gravity="center"
                        android:textColor="@color/activity_login_edit"
                        android:hint="input data"
                        android:inputType = "textEmailAddress"
                        android:singleLine = "true"
                        android:lines = "1"
                        />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_join_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/join_submit"
                    android:textColor="@color/activity_main_app_comment"
                    android:textSize="20sp"
                    >
                </Button>

                <TextView
                    android:id="@+id/tv_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:textColor="@color/activity_main_app_comment"
                    android:textSize="30sp"
                    >
                </TextView>
            </LinearLayout>

            <!-- content end -->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_right"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_margin="@dimen/activity_layout_right_margin"
            android:layout_weight="1"
            android:background="@color/activity_layout_right_background"
            android:orientation="vertical"
            android:padding="@dimen/activity_layout_right_padding"
            android:visibility="gone" >
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone" >
    </RelativeLayout>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:src="@drawable/bangpool"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>

